# kryten-playlist

./: CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTALL_GUIDE.md  README.md  catalog.db  check_db.py  check_kv_state.py  compare_models.py  config.example.json  config_debug.json  config_local.json  datacatalog.db  debug_db.py  debug_item.py  debug_mediacms_auth_v2.py  debug_move.py  debug_move_detailed.py  debug_position.py  duplicates.md  inital-spec.md  kryten-enrich.config.json  list_buckets.py  monitor_move_payload.py  publish.ps1  publish.sh  pyproject.toml  pyproject.toml.bak  queue_data.json  simulate_move_command.py  simulate_move_event.py  start-playlist.ps1  start-playlist.sh  verify_queue_api.py
.github/agents/: python-expert.md.agent.md
.github/chatmodes/: prd.chatmode.md
.github/workflows/: python-publish.yml
data/: catalog.db-shm  catalog.sqlite3
docs/: catalog-management.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
kryten_playlist/: __init__.py  __main__.py  admin_cmds.py  catalog_refresh_watcher.py  config.py  marathon.py  queue_apply.py  service.py
kryten_playlist/auth/: __init__.py  otp.py
kryten_playlist/catalog/: __init__.py  cli.py  config.py  duration_fitting.py  enhanced_schema.py  enrich.py  fake_connector.py  ingest.py  markdown_export.py  mediacms_connector.py  models.py  rebuild.py  title_sanitizer.py  worker.py
kryten_playlist/domain/: __init__.py  schemas.py
kryten_playlist/nats/: __init__.py  contracts.py  kv.py
kryten_playlist/storage/: __init__.py  catalog_repo.py  schema.py  sqlite.py
kryten_playlist/web/: __init__.py  app.py  deps.py  ui.py
scripts/: enrich.ps1  enrich.sh  ingest.ps1  ingest.sh
spec/: prd-catalog-browser.md  prd-playlist-management-ui.md  ui-phase-0-spec-api-extensions.md  ui-phase-1-spec-foundation.md  ui-phase-2-spec-catalog-crud.md  ui-phase-3-spec-drag-drop.md  ui-phase-4-spec-visibility-forking.md  ui-phase-5-spec-marathon-queue.md  ui-phase-6-spec-realtime-polish.md
tests/: test_admin_cmds.py  test_auth.py  test_auth_otp.py  test_catalog_refresh_pipeline.py  test_catalog_refresh_watcher.py  test_duration_fitting.py  test_enrich.py  test_frontend_drag_drop.py  test_frontend_drag_drop_detailed.py  test_ingest.py  test_marathon.py  test_mediacms_connector.py  test_move_verification.py  test_queue_apply.py  test_queue_debug.py  test_queue_drag_drop.py  test_queue_view.py  test_robot_commands.py  test_stats.py  test_title_sanitizer.py
(+162 files in other folders)
