[project]
name = "kryten-playlist"
version = "0.3.3"
description = "Kryten playlist management service - handles video queue, playlist operations, and catalog enrichment with LLM"
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
keywords = [ "cytube", "moderation", "chat", "nats", "microservices", "catalog", "llm", "enrichment",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Communications :: Chat", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Multimedia :: Video",]
dependencies = [ "kryten-py>=0.10.5", "fastapi>=0.115.0,<0.116.0", "uvicorn>=0.30.0,<0.31.0", "aiosqlite>=0.20.0,<0.21.0", "jinja2>=3.1.4,<4.0.0", "httpx>=0.27.0,<0.28.0", "click>=8.1.0,<9.0.0", "json_repair>=0.54.3,<0.55.0",]
[[project.authors]]
name = "Kryten Robot Team"

[project.urls]
Homepage = "https://github.com/grobertson/kryten-playlist"
Repository = "https://github.com/grobertson/kryten-playlist"
Issues = "https://github.com/grobertson/kryten-playlist/issues"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "pytest>=8.0.0,<9.0.0", "pytest-asyncio>=0.24.0,<0.25.0", "pytest-mock>=3.14.0,<4.0.0", "pytest-httpx>=0.30.0,<0.31.0", "black>=23.0.0,<24.0.0", "ruff>=0.1.0,<0.2.0", "mypy>=1.7.0,<2.0.0",]

[project.license]
text = "MIT"

[project.scripts]
kryten-playlist = "kryten_playlist.__main__:main"
kryten-catalog = "kryten_playlist.catalog.cli:cli"
kryten-ingest = "kryten_playlist.catalog.cli:ingest_standalone"
kryten-enrich = "kryten_playlist.catalog.cli:enrich_batch_standalone"

[tool.black]
line-length = 100
target-version = [ "py310",]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff.lint]
select = [ "E", "F", "W", "I", "N",]
ignore = [ "E501",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
asyncio_mode = "auto"
addopts = "-v"
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "E402", "F401",]

[tool.hatch.build.targets.wheel]
packages = [ "kryten_playlist",]
